--- a/package.json
+++ b/package.json
@@ -1,85 +1,101 @@
 {
-  "name": "files-api",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
-  "private": true,
-  "license": "UNLICENSED",
-  "scripts": {
-    "prebuild": "rimraf dist",
-    "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "lint:ts": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix --plugin tsc --rule 'tsc/config: [2, {configFile: \"./tsconfig.json\"}]'",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "release": "standard-version --commit-all"
-  },
-  "dependencies": {
-    "@nestjs/common": "^7.0.0",
-    "@nestjs/config": "^0.5.0",
-    "@nestjs/core": "^7.0.0",
-    "@nestjs/graphql": "^7.6.0",
-    "@nestjs/platform-express": "^7.0.0",
-    "conventional-changelog-cli": "^2.0.34",
-    "graphql": "^15.3.0",
-    "graphql-tools": "^6.0.18",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4"
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^9.1.1",
-    "@commitlint/config-conventional": "^9.1.1",
-    "@graphql-inspector/cli": "^2.1.0",
-    "@nestjs/cli": "^7.0.0",
-    "@nestjs/schematics": "^7.0.0",
-    "@nestjs/testing": "^7.0.0",
-    "@types/express": "^4.17.3",
-    "@types/jest": "25.2.3",
-    "@types/node": "^13.9.1",
-    "@types/supertest": "^2.0.8",
-    "@typescript-eslint/eslint-plugin": "3.0.2",
-    "@typescript-eslint/parser": "3.0.2",
-    "eslint": "7.1.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-tsc": "^1.2.0",
-    "husky": "^4.2.5",
-    "jest": "26.0.1",
-    "prettier": "^1.19.1",
-    "standard-version": "^8.0.2",
-    "supertest": "^4.0.2",
-    "ts-jest": "26.1.0",
-    "ts-loader": "^6.2.1",
-    "ts-node": "^8.6.2",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.7.4"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".spec.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
-  },
-  "standard-version": {
+    "name": "nestjs-boilerplate",
+    "version": "0.0.1",
+    "description": "",
+    "author": "",
+    "private": true,
+    "license": "UNLICENSED",
     "scripts": {
-      "postchangelog": "./.changelog-graphql-diffs.sh"
+        "prebuild": "rimraf dist",
+        "build": "nest build",
+        "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+        "start": "nest start",
+        "start:dev": "nest start --watch --exec \"node -r source-map-support/register\"",
+        "start:debug": "nest start --debug --watch",
+        "start:prod": "node dist/main",
+        "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+        "lint:ts": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix --plugin tsc --rule 'tsc/config: [2, {configFile: \"./tsconfig.json\"}]'",
+        "test": "jest",
+        "test:watch": "jest --watch",
+        "test:cov": "jest --coverage",
+        "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+        "test:e2e": "jest --config ./test/jest-e2e.json",
+        "release": "standard-version --commit-all",
+        "first-release": "standard-version --commit-all --first-release",
+        "typeorm:cli": "node --require ts-node/register ./node_modules/typeorm/cli.js --config src/config/orm-migration.config.ts",
+        "migration:create": "npm run typeorm:cli -- migration:create -d src/migrations -n",
+        "migration:generate": "npm run typeorm:cli -- migration:generate -p true -d src/migrations -n",
+        "migration:run": "npm run typeorm:cli -- migration:run",
+        "migration:revert": "npm run typeorm:cli -- migration:revert"
+    },
+    "dependencies": {
+        "@nestjs/common": "^7.0.0",
+        "@nestjs/config": "^0.5.0",
+        "@nestjs/core": "^7.0.0",
+        "@nestjs/graphql": "^7.9.9",
+        "@nestjs/platform-express": "^7.0.0",
+        "@nestjs/typeorm": "^7.1.3",
+        "apollo-server-express": "^2.23.0",
+        "graphql": "https://gitlab.i-link.pro/i-link-public/graphql-js/uploads/df752739efd4586f54b42a63356af212/v15.5.0-with-print-directives.1.tar.gz",
+        "graphql-tools": "^6.0.18",
+        "pg": "^8.3.3",
+        "reflect-metadata": "^0.1.13",
+        "rimraf": "^3.0.2",
+        "rxjs": "^6.5.4",
+        "typeorm": "^0.2.31"
+    },
+    "devDependencies": {
+        "@commitlint/cli": "^11.0.0",
+        "@commitlint/config-conventional": "^11.0.0",
+        "@graphql-inspector/cli": "^2.1.0",
+        "@nestjs/cli": "^7.0.0",
+        "@nestjs/schematics": "^7.0.0",
+        "@nestjs/testing": "^7.0.0",
+        "@types/express": "^4.17.3",
+        "@types/jest": "25.2.3",
+        "@types/node": "^13.9.1",
+        "@types/supertest": "^2.0.8",
+        "@typescript-eslint/eslint-plugin": "3.0.2",
+        "@typescript-eslint/parser": "3.0.2",
+        "conventional-changelog-cli": "^2.0.34",
+        "eslint": "^7.2.0",
+        "eslint-config-prettier": "^6.10.0",
+        "eslint-plugin-import": "^2.20.1",
+        "eslint-plugin-no-null": "^1.0.2",
+        "eslint-plugin-tsc": "^1.2.0",
+        "husky": "^4.2.5",
+        "jest": "26.0.1",
+        "prettier": "^2.2.1",
+        "pretty-quick": "^3.1.0",
+        "source-map-support": "^0.5.19",
+        "standard-version": "^9.0.0",
+        "supertest": "^4.0.2",
+        "ts-jest": "26.1.0",
+        "ts-loader": "^6.2.1",
+        "ts-node": "^8.6.2",
+        "tsconfig-paths": "^3.9.0",
+        "typescript": "^3.7.4"
+    },
+    "jest": {
+        "moduleFileExtensions": [
+            "js",
+            "json",
+            "ts"
+        ],
+        "rootDir": "src",
+        "testRegex": ".spec.ts$",
+        "transform": {
+            "^.+\\.(t|j)s$": "ts-jest"
+        },
+        "coverageDirectory": "../coverage",
+        "testEnvironment": "node",
+        "moduleNameMapper": {
+            "^src/(.+)$": "<rootDir>/$1"
+        }
+    },
+    "standard-version": {
+        "scripts": {
+            "postchangelog": "./.changelog-graphql-diffs.sh"
+        }
     }
-  }
 }
