feat: authentication & authorization implemented

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,14 +5,12 @@
     "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
     "target": "es2017",
-    "sourceMap": true,
+    "sourceMap": false,
     "outDir": "./dist",
     "baseUrl": "./",
     "incremental": true,
-    "strictNullChecks": true,
-    "noImplicitAny": true
+    "skipLibCheck":  true,
   },
   "exclude": ["node_modules", "dist"]
 }
