feat: authentication & authorization improved, other examples added

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,16 @@
-NODE_ENV=development | production
+NODE_ENV=development
 HOST=localhost
-PORT=3000
+PORT=3008
 
 PSQL_HOST=localhost
 PSQL_PORT=5432
-PSQL_DATABASE=
-PSQL_USERNAME=
-PSQL_PASSWORD=
+PSQL_DATABASE=ln
+PSQL_USERNAME=postgres
+PSQL_PASSWORD=postgres
+
+KTY=RSA
+ALGORITHM=RS256
+
+ACCESS_TOKEN_TTL=6000
+REFRESH_TOKEN_TTL=1
+TOKEN_TYPE=Bearer
